mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_var_type.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_var_type.mux`
error: Expected expression, found end of input
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_var_type.mux:2:8
   |
 2 | auto y =
   |        ^
